@@ -93,9 +93,10 @@ AC_ARG_WITH(services,
 
                            ae_component aecgi basicauth httpd mysql oracle
                            postgresql remote remote_client requestHandler
-                           sessionHandler templating web fcgiprot userdir], [
+                           rewrite sessionHandler templating web fcgiprot 
+                           userdir], [
 	SERVICES=$withval], [
-	SERVICES="ae_component aecgi basicauth httpd mysql oracle postgresql remote remote_client requestHandler sessionHandler templating web fcgiprot userdir";])
+	SERVICES="ae_component aecgi basicauth httpd mysql oracle postgresql remote remote_client requestHandler rewrite sessionHandler templating web fcgiprot userdir";])
 
 
 dnl Checks for programs.
