@@ -216,7 +216,7 @@ Additional options if building SkunkWeb:
 
                            aecgi, ae_component, basicauth, fcgiprot, httpd, mysql,
                            oracle, postgresql, remote, remote_client, requestHandler,
-                           sessionHandler, templating, userdir, web
+                           rewrite, sessionHandler, templating, userdir, web
                            [default: install all services]
 
   --with-sudo=/path/sudo  Specify path to sudo
